# rede

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  example.toml  faq.html  introduction.html  print.html  searchindex.js  searchindex.json
.github/: release-drafter.yml
.github/drafts/: base.yml  parser.yml  placeholders.yml  rede.yml  schema.yml
.github/workflows/: ci.yml  deploy_docs.yml  publish_bin.yml  publish_parser.yml  publish_placeholders.yml  publish_schema.yml  rede-release-drafter.yml  release-drafter.yml
book/: book.toml
book/src/: SUMMARY.md  contributors.md  faq.md  introduction.md
book/src/reference_guide/: command_line_interface.md  errors.md  request_dsl.md  tools.md
book/src/reference_guide/command_line_interface/: example.md  run.md
book/src/reference_guide/request_dsl/: body.md  input_parameters.md  placeholders.md
book/src/roadmap/: upcoming.md
book/src/user_guide/: how_to_run.md  installation.md
demo/: demo-rede.sh  example.toml
docs/examples/: http_request.toml  request.toml
docs/schema/: schema_v0.1.toml  schema_v0.x.toml  schema_v1.toml
parser/: Cargo.toml  README.md
parser/src/: body.rs  error.rs  http.rs  input_param.rs  lib.rs  method.rs  parser.rs  request.rs  schema.rs
parser/src/http/: schema.rs
parser/src/schema/: body.rs  input_param.rs  query_params.rs  table.rs  types.rs  validation.rs
parser/test/requests/: get_plain_queryparams.toml
placeholders/: Cargo.toml  README.md
placeholders/src/: lib.rs  placeholders.rs  renderer.rs  resolver.rs  value_picker.rs
reference_guide/: command_line_interface.html  errors.html  request_dsl.html  tools.html
reference_guide/command_line_interface/: example.html  run.html
reference_guide/request_dsl/: body.html  input_parameters.html  placeholders.html
roadmap/: upcoming.html
schema/: Cargo.toml  README.md
schema/src/: body.rs  input_param.rs  lib.rs
user_guide/: how_to_run.html  installation.html
