[workspace]
members = ["bin", "parser", "placeholders", "schema"]
default-members = ["bin"]
resolver = "2"

[workspace.package]
edition = "2021"

authors = ["SotoEstevez <ricardo@sotoestevez.dev"]
homepage = "https://rede.sotoestevez.dev/"
repository = "https://github.com/kriogenia/rede"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
http = "1.1"
log = "0.4"
mime = "0.3"
thiserror = "1.0"
