[package]
name = "rede_parser"
version = "0.1.1"
edition.workspace = true

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

categories = [ "parser-implementations", "development-tools" ]
description = "Parser in charge of modeling Rede's files"
documentation = "https://docs.rs/rede_parser"
keywords = [ "parser", "rede", "toml", "http" ]
readme = "./README.md"

[dependencies]
http = "1.1"
http-serde = "2.0"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
