[package]
name = "rede_parser"
version = "0.2.2"
edition.workspace = true

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

categories = ["parser-implementations", "development-tools"]
description = "Parser in charge of modeling Rede's files"
documentation = "https://docs.rs/rede_parser"
keywords = ["parser", "rede", "toml", "http"]
readme = "./README.md"

[features]
input_params = ["rede_schema/input_params"]

[dependencies]
rede_schema = { version = "0.1.1", path = "../schema" }

http.workspace = true
mime.workspace = true
thiserror.workspace = true

http-serde = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
