[package]
name = "rede_placeholders"
version = "0.1.0"
edition.workspace = true

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

categories = ["parser-implementations", "development-tools"]             #// todo
description = "Handles the discovering and filling of rede placeholders"
documentation = "https://docs.rs/rede_placeholders"
keywords = ["rede", "placeholder", "search", "replace"]
readme = "./README.md"

[dependencies]
miette.workspace = true
http.workspace = true
rede_schema = "0.1"
regex = "1.10.6"

[dev-dependencies]
mime.workspace = true
rede_parser = "0.2"
