[package]
name = "rede_placeholders"
version = "0.1.0"
edition.workspace = true

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

categories = ["parser-implementations", "development-tools"]             #// todo
description = "Handles the discovering and filling of rede placeholders"
documentation = "https://docs.rs/rede_placeholders"
keywords = ["rede", "placeholder", "search", "replace"]
readme = "./README.md"

[features]
input_params = ["rede_schema/input_params"]

[dependencies]
rede_schema = "0.2"
http.workspace = true
miette.workspace = true
regex = "1.10.6"

[dev-dependencies]
mime.workspace = true
rede_parser = "0.2.2"
