[package]
name = "rede_schema"
version = "0.1.1"
edition.workspace = true

authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

categories = ["network-programming"]
description = "Exposes the request schema used by rede"
documentation = "https://docs.rs/rede_schema"
keywords = ["rede", "schema", "request"]
readme = "./README.md"

[features]
input_params = []

[dependencies]
http.workspace = true
mime.workspace = true
